[gd_scene load_steps=6 format=2]

[ext_resource path="res://CustomTheme.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/MainMenuFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/Main Menu.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/HighscoresFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/SaveFile.tscn" type="PackedScene" id=5]

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.243137, 0.0235294, 0.352941, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -152.0
margin_top = 5.0
margin_right = 161.0
margin_bottom = 112.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "COOL
BROUGHLIKE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HIGHSCORES_RUN" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -28.0
margin_right = -32.0
margin_bottom = 79.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "RUN
99
99
99
99
99"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HIGHSCORES_SCORE" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -28.0
margin_right = 32.0
margin_bottom = 79.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "SCORE
99
99
99
99
99"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HIGHSCORES_TOTAL" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = -28.0
margin_right = 160.0
margin_bottom = 79.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "TOTAL
999
999
999
999
999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -36.0
margin_top = -27.0
margin_right = 36.0
margin_bottom = -3.0
theme = ExtResource( 1 )
text = "PLAY"

[node name="SaveFile" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
